welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:6: error: reassignment to val
  } else if (day=0 && day=6 && !vacation){
                ^alarmClock:9: error: type mismatch;
 found   : Boolean(false)
 required: String
    return false
           ^